add: integration tests